--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Calcul <Video></Video>ator</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="calculator">
@@ -19,5 +19,19 @@
             <button class="btn" data-value="4">4</button>
             <button class="btn" data-value="5">5</button>
             <button class="btn" data-value="6">6</button>
-            <button class="btn operator" data-value="*">*</button>
+            <button class="btn operator" data-value=""></button>
             <button class="btn" data-value="1">1</button>
+            <button class="btn" data-value="2">2</button>
+            <button class="btn" data-value="3">3</button>
+            <button class="btn operator" data-value="-">-</button>
+            <button class="btn" data-value="0">0</button>
+            <button class="btn" data-value=".">.</button>
+            <button class="btn equal" data-value="=">=</button>
+            <button class="btn operator" data-value="+">+</button>
+            <button class="btn clear" data-value="C">C</button>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+</body>
+</html>
